[gd_scene load_steps=22 format=3 uid="uid://bsp515y3w6s0l"]

[ext_resource type="Script" path="res://scenes/enemy/enemy.gd" id="1_sk383"]
[ext_resource type="Texture2D" uid="uid://ddfn5g0y13ux4" path="res://assets/Sorcerer/sorcerer villain purple.png" id="2_ds858"]
[ext_resource type="Texture2D" uid="uid://cvyckc5sp0aa6" path="res://assets/Sorcerer/sorcerer villain purple white.png" id="3_6vxgn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_koa03"]
radius = 746.001

[sub_resource type="AtlasTexture" id="AtlasTexture_aouuq"]
atlas = ExtResource("2_ds858")
region = Rect2(600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnvub"]
atlas = ExtResource("2_ds858")
region = Rect2(800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_wkhdy"]
atlas = ExtResource("2_ds858")
region = Rect2(1000, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxr7d"]
atlas = ExtResource("2_ds858")
region = Rect2(1200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_8lbgb"]
atlas = ExtResource("3_6vxgn")
region = Rect2(600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_davec"]
atlas = ExtResource("3_6vxgn")
region = Rect2(800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxfpe"]
atlas = ExtResource("3_6vxgn")
region = Rect2(1000, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_72b16"]
atlas = ExtResource("3_6vxgn")
region = Rect2(1200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_akm0y"]
atlas = ExtResource("2_ds858")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_2e43x"]
atlas = ExtResource("2_ds858")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6hgc"]
atlas = ExtResource("2_ds858")
region = Rect2(400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymaxx"]
atlas = ExtResource("3_6vxgn")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhjs5"]
atlas = ExtResource("3_6vxgn")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6x0k"]
atlas = ExtResource("3_6vxgn")
region = Rect2(400, 0, 200, 200)

[sub_resource type="SpriteFrames" id="SpriteFrames_xvf5h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aouuq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnvub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wkhdy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxr7d")
}],
"loop": false,
"name": &"attack_black",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8lbgb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_davec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxfpe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72b16")
}],
"loop": false,
"name": &"attack_white",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_akm0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2e43x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6hgc")
}],
"loop": true,
"name": &"default_black",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymaxx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhjs5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6x0k")
}],
"loop": true,
"name": &"default_white",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rguti"]
size = Vector2(52, 127)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u0j68"]
size = Vector2(52, 127)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_sk383")

[node name="DetectionArea" type="Area2D" parent="."]
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_koa03")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_xvf5h")
animation = &"default_black"
flip_h = true

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(-30, -47)

[node name="ShootTimer" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(9, 20.5)
shape = SubResource("RectangleShape2D_rguti")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(9, 20.5)
shape = SubResource("RectangleShape2D_u0j68")

[node name="HealthBar" type="ProgressBar" parent="."]
self_modulate = Color(0, 0.776471, 0.541176, 1)
offset_left = -77.0
offset_top = -118.0
offset_right = 131.0
offset_bottom = -90.0
scale = Vector2(0.8, 0.8)

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_area_2d_body_entered"]
